update the deployment

--- a/.github/workflows/aws-docker-hosting-merge.yml
+++ b/.github/workflows/aws-docker-hosting-merge.yml
@@ -33,7 +33,8 @@ jobs:
         name: prepare the docker-compose run
         run: |
               mkdir vue-331
-              cp docker-compose.yml vue-331/docker-comopse.yml
+              cp docker-compose.yml vue-331/docker-compose.yml
               cd vue-331
+              docker-compose -H ${{ secrets.HOST_SERVER }} down
               docker-compose -H ${{ secrets.HOST_SERVER }} pull
               docker-compose -H ${{ secrets.HOST_SERVER }} up -d
