--- a/.github/workflows/aws-docker-hosting-merge.yml
+++ b/.github/workflows/aws-docker-hosting-merge.yml
@@ -35,6 +35,10 @@ jobs:
               mkdir vue-331
               cp docker-compose.yml vue-331/docker-compose.yml
               cd vue-331
-              docker-compose -H ${{ secrets.HOST_SERVER }} down
-              docker-compose -H ${{ secrets.HOST_SERVER }} pull
-              docker-compose -H ${{ secrets.HOST_SERVER }} up -d
+      - 
+        name: docker compose
+        uses: isbang/compose-action@v1.1.0
+        with:
+          compose-file: "./docker-compose.yml"
+          down-flag: "-H ${{ secrets.HOST_SERVER }}"
+          up-flags: "-H ${{ secrets.HOST_SERVER }}"              
