update other typos

--- a/.github/workflows/aws-docker-hosting-merge.yml
+++ b/.github/workflows/aws-docker-hosting-merge.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           compose-file: "./docker-compose.yml"
           down-flags: "-H ${{ secrets.HOST_SERVER }}"
-          up-flagss: "-H ${{ secrets.HOST_SERVER }}"              
+          up-flags: "-H ${{ secrets.HOST_SERVER }}"              
